[tool.poetry]
name = "logits-reweighting"
version = "0.1.0"
description = "Practical Project by Joschka Braun and Bálint Mucsányi: Implementation of a custom LogitsProcessor designed to enhance topical focus in abstractive summarization by adjusting token logits."
authors = ["Joschka <joschkacbraun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
transformers = "^4.40.1"
nltk = "^3.8.1"
black = "^23.0.0"
flake8 = "^5.0.0"
gensim = "^4.3.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
spacy = "^3.7.4"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
